tests/build/widget_new/missing_field_all_single.stderr
error[E0277]: the trait bound `(): IntoVar<SideOffsets>` is not satisfied
 --> $DIR/missing_field_all_single.rs:8:18
  |
8 |         margin = { }
  |                  ^^^
  |                  |
  |                  expected an implementor of trait `IntoVar<SideOffsets>`
  |                  help: consider borrowing here: `&{ }`
  |
  = note: required by `margin_ArgsImpl::<T_margin>::new`
